header section done

--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ nav > ul {
   display: flex;
   margin-right: 90px;
   align-items: center;
-
 }
 nav li {
   list-style: none;
@@ -47,10 +46,8 @@ nav li a {
   color: #3c354f;
   font-size: 1rem;
   font-weight: 500;
-  
 }
 .box {
-  
   display: flex;
   align-items: center;
   width: 250px;
@@ -64,4 +61,77 @@ nav li a {
   height: 24\px;
 }
 
+/* Banner section  */
+.banner {
+  gap: 70px;
+  margin-top: 38px;
+  background-image: url(/images/Group\ 14.png);
 
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.banner-content {
+  margin-left: 90px;
+}
+.banner img {
+  margin-right: 90px;
+}
+.banner-content h2 {
+  color: #0b0223;
+  font-size: 1.8rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.banner-content h1 {
+  font-size: 3.6rem;
+  font-weight: 800;
+  text-transform: uppercase;
+
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.banner-content p {
+  text-align: start;
+  color: #534c64;
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: 500;
+  text-transform: lowercase;
+}
+.btn-primary {
+  border: 0px;
+  text-align: center;
+  width: 100px;
+  height: 40px;
+  display: inline-flex;
+  padding: 13px 23px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 25px;
+  background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+
+  color: #fff;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.btn-secondary{
+  border: 0px;
+  text-align: center;
+  width: 120px;
+  height: 44px;
+  display: inline-flex;
+  padding: 15px 24px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 25px;
+  background: #4EC5F7;
+
+  color: #fff;
+  font-weight: 500;
+  text-transform: uppercase;
+
+}
