--- a/style.css
+++ b/style.css
@@ -193,3 +193,29 @@ nav li a {
 .first-paragraph {
   margin-left: 170px;
 }
+/* Play Instantly, No Downloads, No Installs */
+.play-instantly {
+  display: flex;
+  margin-top: 140px;
+  gap: 200px;
+}
+.text-content {
+  text-align: right;
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 60px;
+}
+.text-content p {
+  color: #534c64;
+  text-align: right;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 30px;
+}
+.play-instantly .picture {
+  width: 60%;
+  height: 60%;
+}
+.play-instantly > .picture > .seond {
+}
+
